# test-engine

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md  env.ts  rust-toolchain.toml  test.ts  typos.toml
bench/: run.py  (+4 more)
te-inspect/: Cargo.toml
te-inspect/src/: main.rs
test-engine/: Cargo.toml  build.rs
test-engine/src/: app.rs  app_runner.rs  app_starter.rs  assets.rs  assets_paths.rs  config.rs  game_drawer.rs  ios_log.rs  level_drawer.rs  lib.rs  pipelines.rs
test-engine/src/audio/: mod.rs  sound.rs
test-engine/src/filesystem/: mod.rs  paths.rs
test-engine/src/game/: game.rs  mod.rs  object.rs  primitives.rs  shape.rs
test-engine/src/generate/noise/: terrain.rs
test-engine/src/gm/: animation.rs  axis.rs  converter.rs  misc.rs  mod.rs  test_state.rs  tracked_cell.rs
test-engine/src/gm/color/: color.rs  color_base.rs  helpers.rs  u8_color.rs
test-engine/src/gm/flat/: corner_radii.rs  mod.rs  point.rs  points_path.rs  process_points.rs  rect.rs  shape.rs  size.rs  vertex2d.rs
test-engine/src/gm/num/: into_f32.rs  lossy_convert.rs  mod.rs
test-engine/src/gm/volume/: mod.rs
test-engine/src/inspect/: edit_log.rs  inspect_service.rs  mod.rs  view_conversion.rs
test-engine/src/inspect/protocol/: app_command.rs  inspector_command.rs  mod.rs  transport.rs
test-engine/src/inspect/views/: anchor_view.rs
test-engine/src/level/: control.rs  level_manager.rs  mod.rs  sets.rs  sprite_data.rs  to_collider.rs
test-engine/src/level/level/: level.rs  level_base.rs  level_creation.rs  level_physics.rs  level_setup.rs  mod.rs
test-engine/src/level/units/: banner.rs  body.rs  mod.rs  moving_wall.rs  player.rs  sprite.rs  unit.rs  wall.rs  weapon.rs
test-engine/src/render/: buffer_helper.rs  device_helper.rs  mod.rs  shader_data.rs  vec_buffer.rs  vertex_layout.rs
test-engine/src/render/data/: mod.rs  path_data.rs  rect_view.rs  sprite_instance.rs  textured_sprite_instance.rs  ui_gradient_instance.rs  ui_image_instance.rs  ui_rect_instance.rs  ui_shadow_instance.rs
test-engine/src/render/pipelines/: background_pipeline.rs  lab_pipeline.rs  mod.rs  pipeline_type.rs  polygon_pipeline.rs  rect_pipeline.rs  ui_backdrop_pipeline.rs  ui_blur_pipeline.rs  ui_path_pipeline.rs
test-engine/src/render/uniform/: uniform.rs  uniform_bind.rs
test-engine/src/store/: encrypt.rs  mod.rs  on_disk.rs  on_disk_encrypted.rs
test-engine/src/ui/: hover.rs  images.rs  input.rs  mod.rs  modal_view.rs  navigation_view.rs  shadow.rs  style.rs  text_field_constraint.rs  theme.rs  to_label.rs  touch_layer.rs  touch_stack.rs  ui_dispatch.rs  ui_drawer.rs  ui_event.rs  ui_manager.rs  with_header.rs
test-engine/src/ui/input/: input.rs  mod.rs  touch.rs  touch_event.rs  ui_events.rs
test-engine/src/ui/layout/: layout_rule.rs
test-engine/src/ui/serde/: layout_rule_serde.rs  mod.rs  placer_serde.rs  weak_serde.rs
test-engine/src/ui/ui_test/: capture.rs  checks.rs  collect.rs  helpers.rs  human.rs  mod.rs  record.rs  report.rs  runner.rs  suite.rs  ui_test.rs
test-engine/src/ui/view/: cell_callbacks.rs  container.rs  mod.rs  setup.rs  view.rs  view_animation.rs  view_base.rs  view_callbacks.rs  view_controller.rs  view_data.rs  view_frame.rs  view_internal.rs  view_layout.rs  view_subviews.rs  view_test.rs  view_touch.rs  view_transition.rs
test-engine/src/ui/views/: color_meter.rs  mod.rs  root_view.rs  sprite_view.rs
test-engine/src/window/: app_handler.rs  frame_counter.rs  mod.rs  redraw.rs  render_frame.rs  screen.rs  screenshot.rs  state.rs  surface.rs  vertex_buffer.rs  window.rs  window_events.rs
test-engine/src/window/image/: image.rs  image_bind.rs  mod.rs  texture.rs  tinted_image.rs  to_image.rs
test-engine/src/window/text/: font.rs  mod.rs  shaped_layout.rs
test-game/: Cargo.toml
test-game/src/: api.rs  app.rs  lib.rs  main.rs
test-game/src/interface/: card.rs  game_view.rs  home_view.rs  just_view.rs  loading_view.rs  mod.rs  noise_view.rs  palette.rs  polygon_view.rs  render_view.rs  root_layout_view.rs  styles.rs
test-game/src/interface/dev/: benchmark_view.rs  mod.rs
test-game/src/interface/scenes/: effects.rs  frosted_hud.rs  game_scene.rs  mod.rs  scroll_tables.rs  text_corruption.rs  text_corruption_colors.txt  text_fonts.rs  widget_gallery.rs
test-game/src/interface/test_game_view/: benchmark_view.rs  mod.rs
test-game/src/no_physics/: no_physics_view.rs
ui-test/: Cargo.toml
ui-test-suite/: Cargo.toml
ui-test-suite/src/: lib.rs
ui-test-suite/src/base/: async_calls.rs  color_checker.rs  colors.rs  corner_radius.rs  global_styles.rs  keymap.rs  keymap_named_key.rs  layout.rs  mod.rs  modal_test.rs  on_tap_add.rs  out_bounds_test.rs  present.rs  rest_request.rs  root_view.rs  scale.rs  selection.rs  styles.rs  template.rs  text_occlusion.rs  touch_order.rs  touch_stack.rs  transition.rs  transparency.rs  view_order.rs
ui-test-suite/src/inspect/: anchor_view.rs  mod.rs  parsing.rs  placer_view.rs
ui-test-suite/src/views/basic/: background.rs  button.rs  checkbox.rs  corner_radii.rs  custom_text_field.rs  font_zoo.rs  gradient.rs  hover.rs  image_scissor.rs  inject_touch.rs  label.rs  label_fit_text.rs  label_font.rs  label_image.rs  label_measure.rs  label_stress.rs  letter_spacing.rs  mod.rs  multiline_label.rs  nine_segment.rs  shadow.rs  slider.rs  switch.rs  text_field.rs  theme_switch.rs
ui-test-suite/src/views/complex/: alert.rs  backdrop_blur.rs  buttons_on_table.rs  drop_down.rs  mod.rs  modal_blur.rs  modal_scrim.rs  number_view.rs  number_view_design.rs  point_view.rs  table_view_resize.rs
ui-test-suite/src/views/containers/: mod.rs  movable_view.rs
ui-test/src/: main.rs
ui-test/src/base/: color_checker.rs  colors.rs  corner_radius.rs  dispatch.rs  global_styles.rs  keymap.rs  keymap_named_key.rs  layout.rs  mod.rs  modal_test.rs  on_tap_add.rs  out_bounds_test.rs  present.rs  rest_request.rs  root_view.rs  scale.rs  selection.rs  styles.rs  text_occlusion.rs  touch_order.rs  touch_stack.rs  transition.rs  transparency.rs  view_order.rs
ui-test/src/inspect/: mod.rs  parsing.rs  placer_view.rs
(+190 files in other folders)
