
[workspace]

default-members = ["test-game"]
exclude = [
  "deps/hreads",
  "deps/refs",
  "deps/vents",
  "deps/netrun",
]
members = [
  "bench",
  "deps/ui-proc-test",
  "example-app",
  "fuzz",
  "inspector",
  "render-test",
  "te-inspect",
  "test-engine",
  "test-game",
  "test-game-android",
  "ui-test",
  "ui-test-suite",
]

resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.metadata.cargo-machete]
ignored = []

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

module_name_repetitions = "allow"
explicit_deref_methods = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
missing_safety_doc = "allow"
format_push_string = "allow"
new_without_default = "allow"
must_use_candidate = "allow"
module_inception = "allow"
needless_pass_by_value = "allow"
unnecessary_box_returns = "allow"
return_self_not_must_use = "allow"
struct_field_names = "allow"
manual_assert = "allow"

[workspace.dependencies]
android_logger = "0.15"
anyhow = "1.0"
arbitrary = { version = "1.4", features = ["derive"] }
async-std = "1.13"
atomic_float = "1.1"
base64 = "0.22"
bit_ops = "0.2"
bytemuck = { version = "1.25", features = ["derive"] }
cgmath = "0.18"
chrono = "0.4"
clap = { version = "4.6", features = ["derive"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
contour = { version = "0.13", features = ["f32"] }
ctor = "1.0"
dirs = "6.0"
dotenvy = "0.15"
educe = "0.6"
fake = "5.1"
fastrand = "2.4"
fern = "0.7"
gloo-timers = { version = "0.4", features = ["futures"] }
getrandom = "0.4"
hex = "0.4"
image = "0.25"
indexmap = "2.14"
instant = { version = "0.1", features = ["wasm-bindgen"] }
jni = "0.22"
kira = "0.12"
log = "0.4"
lyon = "1.0"
mdns-sd = "0.20"
noise = "0.9"
nonempty = "0.12"
objc2-foundation = { version = "0.3", features = ["NSException", "NSString"] }
parking_lot = "0.12"
paste = "1.0"
pollster = "0.4"
pretty_assertions = "1.4"
quote = "1.0"
rapier2d = { version = "0.33" }
resvg = "0.47"
rfd = "0.17"
rust_decimal = "1.42"
rustybuzz = "0.20"
sentry = { version = "0.48", default-features = false, features = [
  "backtrace",
  "contexts",
  "debug-images",
  "panic",
  "reqwest",
  "rustls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
sysinfo = "0.39"
tiny-skia = "0.12"
tokio = { version = "1.52", features = ["full"] }
usvg = "0.47"
wasm-bindgen-futures = "0.4"
web-time = "1.1"
wgpu = { git = "https://github.com/VladasZ/wgpu", rev = "47e55304a59f0c8d933cb3be3dc84b29a1b871f6" }
wgpu_text = { git = "https://github.com/VladasZ/wgpu-text", rev = "deb50e912148d660e938e69eb27225753b5353a0" }
winit = "0.30"

hreads = { path = "deps/hreads" }
refs = { path = "deps/refs", default-features = true }
vents = { path = "deps/vents" }
netrun = { path = "deps/netrun" }
plat = "0.9"
reflected = "0.30"

level-proc = { path = "deps/level-proc" }
test-engine = { path = "test-engine" }
test-game = { path = "test-game" }
ui-test-suite = { path = "ui-test-suite" }
ui-proc = { path = "deps/ui-proc" }
