[package]
authors = ["Vladas Zakrevskis <146100@gmail.com>"]
edition.workspace = true
name = "te-inspect"
version.workspace = true

[[bin]]
name = "te-inspect"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
test-engine = { workspace = true, features = ["inspect"] }
tokio = { workspace = true }

mdns-sd = { workspace = true }
refs = { workspace = true }

[lints]
workspace = true
