[package]
authors = ["Vladas Zakrevskis <146100@gmail.com>"]
edition.workspace = true
name = "test-game"
version.workspace = true

[[bin]]
name = "test-game"

[lib]
crate-type = ["rlib", "staticlib"]
name = "test_game"

[features]
default = []

webgl = ["test-engine/webgl"]

# Compiles in the UI benchmark (benchmark_view, its system-load guard and GPU
# timing). Off in shipped builds. `make bench` builds test-game with it.
bench = ["dep:sysinfo", "dep:serde_json", "test-engine/bench"]

[dependencies]
anyhow = { workspace = true }
fastrand = { workspace = true }
log = { workspace = true }
netrun = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
sysinfo = { workspace = true, optional = true }

test-engine = { workspace = true, features = ["inspect", "ui-tests"] }
ui-test-suite = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dotenvy = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
plat = { workspace = true }

[lints]
workspace = true
