[package]
edition.workspace = true
version.workspace = true

name = "ui-test"

[[bin]]
name = "ui-test"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }

test-engine = { workspace = true, features = ["inspect", "ui-tests"] }
test-game = { workspace = true }
ui-test-suite = { workspace = true }

[lints]
workspace = true
